deployment/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-core
spec:
  selector:
    app: gateway-core
  ports:
    - name: api
      port: 8080
      targetPort: 8080
    - name: websocket
      port: 8081
      targetPort: 8081
  type: LoadBalancer
