deployment/gateway/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.gateway.info
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-core
              servicePort: 8080
    - host: ws.gateway.info
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-core
              servicePort: 8081
